exercises/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: string-generator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: string-generator
  template:
    metadata:
      labels:
        app: string-generator
    spec:
      volumes: 
        - name: shared-string
          emptyDir: {}
        - name: config-volume
          configMap:
            name: logoutput-config
      containers:
        - name: string-reader
          image: EXERCISES/LOG_OUTPUT/READER
          volumeMounts:
          - name: shared-string
            mountPath: /usr/src/app/files
          - name: config-volume
            mountPath: /usr/src/app/config
            readOnly: true
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
        - name: string-writer
          image: EXERCISES/LOG_OUTPUT/WRITER
          volumeMounts:
          - name: shared-string
            mountPath: /usr/src/app/files
