exercises/log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: string-generator-ingress
spec:
  rules:
  - http:
      paths:
      - path: /log_output
        pathType: Prefix
        backend:
          service:
            name: string-generator-svc
            port:
              number: 2346
